14377
For current Scala trunk:

{code}
object arrayM{

  def m1(a:List[Int]) = a match {
    case List(a0) => a0
    case List(a0, a1) => a1
    case _ => -1000
  }

  def m2(a:Array[Int]) = a match {
    case Array(a0) => a0
    case Array(a0, a1) => a1
    case _ => -1000
  }
}
{code}

I got:
{code}
$$ scalac arrayM.scala 
arrayM.scala:11: error: unreachable code
    case Array(a0, a1) => a1
                          ^
one error found
{code}

As shown on above code, pattern match on List with no errors, but said error found on Array.

